--- a/css/estilosContenido.css
+++ b/css/estilosContenido.css
@@ -17,7 +17,7 @@ body {
     background-repeat: no-repeat;
     width: 100%;
     height: 100vh;
-    color: #fff;
+    color: gray;
     font-family: 'Raleway', sans-serif;
 }
 
@@ -27,29 +27,56 @@ body {
     margin: 0 auto;
 }
 
-.contenedor .descargas a{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 200px;
-    height: auto;
-    background-color: transparent;
-    padding: 0;
-    margin: 0;
+.contenedorLinks{
+  padding: 5px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.contenedor .linkCerrarSesion{
-    width: auto;
-    height: 30px;
-    background-color: BlanchedAlmond;
-    padding: 6px;
-    text-align: center;
-    text-decoration: none;
-    color: #1D0158;
-    font-weight:bold;
-    border: 1px solid green;
-    border-radius: 8px;
+.contenedorLinks *{
+    color: black;
+    display: inline-block;
+    padding: 2px;
+}
+
+.cerrarSesion{
+    margin-right: 10px;
+    width: 70%;
     
+}
+
+.cerrarSesion a{
+    border-radius: 10px;
+    text-decoration: none;
+    border: 2px solid gray;
+    padding: 3px 5px;
+    font-weight: 600;
+    background: azure;
+    font-size: 1.1em;
+}
+
+.descargaLibro{
+    text-align: right;
+    width: 90%;
+}
+
+.descargaLibro a{
+    display: inline-block;
+    width: 100%;
+}
+
+.descargaLibro img{
+    display: inline-block;
+    width: 100%;
+}
+
+.titulo {
+    font-weight: 600;
+    color: #1D0158;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 6px;
 }
 
 .contenedor .notificaciones{
@@ -64,21 +91,17 @@ body {
 .contenedor .notificaciones span{
     width: auto;  
     height: 30px;
-    border: 1px solid gray;
-    background: transparent;
+    border: 2px solid gray;
+    background: azure;
     color: black;
     border-radius: 8px;
-    font-weight:bold;
-    padding: 6px;
+    font-weight:600;
+    padding: 10px 8px;
     text-align: center;
-}
-
-.titulo {
-    font-weight: 600;
-    color: #1D0158;
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 6px;
+    font-size: 1.1em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 p {
