--- a/css/estilosReporteVentas.css
+++ b/css/estilosReporteVentas.css
@@ -9,31 +9,91 @@ body {
 }
 
 .contenedor {
-    width: 100%;
-    height: auto;
+    width: 95%;
+    height: 100vh;
     margin: 20px auto;
+    overflow-x: auto;
 }
 
-.contenedor .cerrarSesion a {
+.cerrarSesion a {
+    display: inline-block;
+    text-align: center;
     text-decoration: none;
     font-size: 15px;
     font-weight: bold;
     color: black;
     background: #638cb5;
     border: 0px;
-    padding: 5px;
-    border-radius: 5px;
-    margin-left: 10px;
+    padding: 8px 10px;
+    width: 120px;
+    height: 30px;
+    line-height: 15px;
+    border-radius: 20px;
 }
 
-.separador {
-    border: 1px solid red;
-    margin: 20px;
+form {
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 10px;
+    padding: 5px;
+    display:flex;
+    align-items: center;
+    justify-content:space-evenly;
+}
+
+.selectContainer{
+    width: fit-content;
+    border:1px solid #d9d9d9;
+    height:30px;
+    overflow: hidden;
+    position:relative;
+}
+
+select {
+   background: transparent;
+   border: none;
+   font-size: 16px;
+   height: 30px;
+   padding: 5px;
+   width: 250px;
+ }
+
+ select:focus{ 
+    outline: none;
+}
+
+.selectContainer::after{
+	content:"\025be";
+	display:table-cell;
+	padding-top:7px;
+	text-align:center;
+	width:30px;
+	height:30px;
+	background-color:#d9d9d9;
+	position:absolute;
+	top:0;
+	right:0px;	
+	pointer-events: none;
+}
+
+.botonContainer{
+    background: yellowgreen;
+    width: fit-content;
+}
+
+.boton {
+    font-size: 15px;
+    font-weight: bold;
+    color: black;
+    background: #638cb5;
+    border: 0px;
+    padding: 5px 15px;
+    border-radius: 5px;
 }
 
 table {
     margin: 10px auto;
-    width: 97%;
+    width: 100%;
     border-collapse: collapse;
     border: 2px solid black;
     font-weight: 500;
@@ -45,6 +105,8 @@ table td {
     text-align: left;
     padding: 5px;
     border-collapse: collapse;
+    word-break: break-all; /* Divide las palabras dentro de las celdas */
+    max-width: 200px; /* Establece un ancho máximo para las celdas */
 }
 
 table th {
@@ -70,41 +132,13 @@ table td:last-child {
     width: 20%;
 }
 
-table tr:nth-child(2n) {
+table tr:nth-child(n) {
     background-color: Gainsboro;
     color: black;
-    font-weight: bold;
 }
 
 caption {
     padding: 1em;
     color: MediumAquaMarine;
     background: #000;
-}
-
-form {
-    width: 97%;
-    margin: 0 auto;
-    margin-top: 10px;
-    padding: 2px;
-    /* border: 1px solid red; */
-}
-
-form input[type="text"] {
-    padding: 5px;
-    width: 250px;
-    font-size: 15px;
-    margin-right: 2px;
-    margin-left: 0px;
-    text-align: justify;
-}
-
-.boton {
-    font-size: 15px;
-    font-weight: bold;
-    color: black;
-    background: #638cb5;
-    border: 0px;
-    padding: 5px 15px;
-    border-radius: 5px;
 }
