--- a/css/estilosReporteVentas.css
+++ b/css/estilosReporteVentas.css
@@ -77,7 +77,7 @@ select {
 }
 
 option {
-    background-color: #f5f5f5 !important;
+    background-color: #f5f5f5;
     color: #333;
     padding: 10px;
     font-size: 16px ;
@@ -96,6 +96,7 @@ option {
     border: 0px;
     padding: 5px 15px;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 table {
@@ -103,7 +104,7 @@ table {
     width: 100%;
     height: fit-content;
     border-collapse: collapse;
-    border: 2px solid black;
+    border: none;
     font-weight: 500;
     font-size: 15px;
 }
@@ -115,6 +116,7 @@ table td {
     border-collapse: collapse;
     word-break: break-all; /* Divide las palabras dentro de las celdas */
     max-width: 200px; /* Establece un ancho máximo para las celdas */
+    text-align: center;
 }
 
 table th {
@@ -122,14 +124,11 @@ table th {
     padding: 5px;
     border-bottom: 1px solid black;
     background: MediumAquaMarine;
-}
-
-table td:not(:first-child) {
-    width: 23.33%;
+    text-align: center;
 }
 
 table tr:nth-child(n) {
-    background-color: Gainsboro;
+    background-color: azure;
     color: black;
 }
 
