--- a/css/estilosReporteVentas.css
+++ b/css/estilosReporteVentas.css
@@ -10,7 +10,7 @@ body {
 
 .contenedor {
     width: 95%;
-    height: 100vh;
+    height: auto;
     margin: 20px auto;
     overflow-x: auto;
 }
@@ -122,7 +122,7 @@ table td {
 table th {
     text-align: left;
     padding: 5px;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #d9d9d9;
     background: MediumAquaMarine;
     text-align: center;
 }
