--- a/css/estilosPrincipalDesktop.css
+++ b/css/estilosPrincipalDesktop.css
@@ -1,144 +1,83 @@
-@media screen and (min-width: 900px) {
-  /* Estilos De Pagina Principal (Mobile-First)  */
-  /* ------------------------------------------- */
-  /* Fuente personalizada */
-  @font-face {
-    font-family: miFuente;
-    src: url(../fonts/Helvetica.ttf);
-  }
-
-  /* Reset General */
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
-
+/* Estilos De Pagina Principal (Mobile-First)  */
+/* ------------------------------------------- */
+@media (min-width: 900px) {
   /* Configuracion Base Pagina */
   html {
-    font-size: 10px;
-    scroll-behavior: smooth;
-    scroll-padding-top: 190px;
-  }
-
-  /* Configuracion Base del Contenido */
-  body {
-    font-family: miFuente;
-    /* background: Azure; */
-    background: blue;
+    scroll-padding-top: 251px;
   }
 
   /* Estructura Grid General de la Pagina (1 Columna=Mobile) */
   .grid-container {
-    width: 100%;
-    display: grid;
-    grid-template:
-      "header" auto
-      "main" auto
-      "footer" auto;
+    max-width: 90%;
+    margin: 0 auto;
   }
 
   /* Configuracion  General del area de la Cabecera */
   .header {
-    grid-area: header;
-    background-image: url(../imagenes/cabecera.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    position: fixed;
-    z-index: 1000;
-    width: inherit;
-    box-shadow: 1rem 0.5rem 0.5rem black;
+    width: 100%;
+    left: 0;
+    height: 250px;
+    display: flex;
+    justify-content: space-between;
   }
 
-  /* Configuracion General del area del Contenido */
-  .main {
-    grid-area: main;
-    background: Azure;
-  }
-
-  /* Configuracion General del area del Pie de Pagina */
-  .footer {
-    grid-area: footer;
-  }
-
-  /* Configraciones Especificas de Las Areas */
   /* Elementos de la cabecera */
   /* Logotipo Principal */
   .logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 20%;
+    height: 70%;
+    padding: 5px;
+    margin-left: 20px;
+    margin-top: 20px;
+  }
+
+  .logo img {
+    width: 100%;
   }
 
   /* Menu de navegacion */
   header nav {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: 10000;
-    right: 100%;
-    margin: 0;
-    top: 10rem;
-    left: -40rem;
-    overflow: scroll;
-    text-align: center;
-    background: rgba(2, 56, 89, 0.8);
+    background: transparent;
+    position: static;
+    overflow: hidden;
+    width: fit-content;
+    height: fit-content;
+    margin-right: 8px;
+    margin-top: 10px;
   }
 
   header nav ul {
-    list-style: none;
-    height: auto;
-    padding: 2rem 0;
-    width: 100%;
+    display: flex;
+    width: fit-content;
+    border-radius: 5px;
+    padding: 2px 5px;
   }
 
   header nav ul li {
-    font-size: 2.4rem;
+    font-size: 1.45rem;
+    margin-right: 2px;
+    padding: 5px;
   }
 
   header nav ul li a {
-    display: block;
-    color: #fff;
-    text-decoration: none;
-    width: 100%;
-    height: 100%;
-    padding: 2rem;
+    color: #c4d6db;
+    width: fit-content;
+    height: fit-content;
+    padding: 2px 2px;
+    border-radius: 5px;
   }
 
   header nav ul li:hover {
-    background: #e6344a;
+    background: rgba(0, 0, 0, 0.3);
+    border-radius: 8px;
   }
 
   header nav ul li a span {
-    margin-right: 1rem;
-    display: inline-block;
+    display: none;
   }
 
   .menu_bar {
-    display: block;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: transparent;
-  }
-
-  /* Icono de Hamburguesa para menú móvil */
-  .menu_bar .bt-menu {
-    display: block;
-    padding: 1rem;
-    color: #fff;
-    overflow: hidden;
-    font-size: 2.5rem;
-    font-weight: normal;
-    text-decoration: none;
-  }
-
-  /* Icono de Hamburguesa para menú móvil */
-  .menu_bar span {
-    float: right;
-    font-size: 2.5rem;
+    display: none;
   }
 
   .container-contenido {
@@ -221,7 +160,7 @@
   }
 
   .responsabilidadesLista {
-    margin-left: 2rem;
+    margin-left: 2.5rem;
     margin-bottom: 1.5rem;
     text-align: left;
     font-size: 1.8rem;
@@ -236,7 +175,6 @@
   }
 
   /* Sección  Pie de Página  */
-
   .footer {
     grid-area: footer;
     background: black;
