Ajuste de Tamaño para Escritorio

--- a/css/estilosPrincipal.css
+++ b/css/estilosPrincipal.css
@@ -171,7 +171,8 @@ header nav ul li a span {
 /* Sección Inicio  */
 .inicio {
   grid-area: inicio;
-  background: Azure;
+  /* background: rgb(197, 216, 216); */
+  background: rgb(196, 230, 230);
   padding-top: 20rem;
 }
 
@@ -237,6 +238,7 @@ header nav ul li a span {
 .footer {
   grid-area: footer;
   background: black;
+  box-shadow: 1rem 0.5rem 0.5rem black;
 }
 
 .contenido-pie {
