--- a/css/estilosPrincipal.css
+++ b/css/estilosPrincipal.css
@@ -249,7 +249,7 @@ header nav ul li a span {
   align-items: center;
 }
 
-.contenido-pie .facebook {
+/* .contenido-pie .facebook {
   display: flex;
   justify-content: center;
   text-align: center;
@@ -257,7 +257,24 @@ header nav ul li a span {
 
 .contenido-pie .facebook img {
   width: 80%;
-}
+} */
+
+ .contenido-pie .facebook {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 5px solid rgb(185, 209, 241);
+    margin-bottom: 15px;
+    display: grid;
+    place-items: center;
+    background-color: aliceblue;
+  }
+
+  .contenido-pie .facebook img {
+    width:125%;
+    object-fit: cover;
+  }
 
 .contenido-pie p {
   color: AliceBlue;
