--- a/css/estilosPrincipalDesktop.css
+++ b/css/estilosPrincipalDesktop.css
@@ -201,17 +201,21 @@
     align-items: center;
   }
 
-  .contenido-pie .facebook {
+   .contenido-pie .facebook {
     width: 150px;
     height: 150px;
     border-radius: 50%;
     overflow: hidden;
     border: 5px solid rgb(185, 209, 241);
     margin-bottom: 15px;
+    display: grid;
+    place-items: center;
+    background-color: aliceblue;
   }
 
   .contenido-pie .facebook img {
-    width:fit-content;
+    width:125%;
+    object-fit: cover;
   }
 
   .contenido-pie p {
