--- a/css/estilosContenido.css
+++ b/css/estilosContenido.css
@@ -12,11 +12,10 @@ html {
 
 body {
     background-image: url('../imagenes/fondo-producto.jpg');
-    background-size: cover;
+    background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
-    width: 100%;
-    height: 100vh;
+    background-attachment: fixed;
     color: gray;
     font-family: 'Raleway', sans-serif;
 }
