--- a/css/estilosContenido.css
+++ b/css/estilosContenido.css
@@ -1,161 +1,168 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-    width: 100%;
-    height: 100vh;
-    
+  width: 100%;
+  height: 100vh;
 }
 
 body {
-    background-image: url('../imagenes/fondo-producto.jpg');
-    background-size: 100% 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    color: gray;
-    font-family: 'Raleway', sans-serif;
+  background-image: url("../imagenes/fondo-producto.jpg");
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  color: gray;
+  font-family: "Raleway", sans-serif;
 }
 
 .contenedor {
-    max-width: 500px;
-    width: 90%;
-    margin: 0 auto;
+  max-width: 500px;
+  width: 90%;
+  margin: 0 auto;
 }
 
-.contenedorLinks{
+.contenedorLinks {
   padding: 5px;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
-.contenedorLinks *{
-    color: black;
-    display: inline-block;
-    padding: 2px;
+.contenedorLinks * {
+  color: black;
+  display: inline-block;
+  padding: 2px;
 }
 
-.cerrarSesion{
-    margin-right: 10px;
-    width: 70%;
-    
+.cerrarSesion {
+  margin-right: 10px;
+  width: 70%;
 }
 
-.cerrarSesion a{
-    border-radius: 10px;
-    text-decoration: none;
-    border: 2px solid gray;
-    padding: 3px 5px;
-    font-weight: 600;
-    background: azure;
-    font-size: 1.1em;
+.cerrarSesion a {
+  border-radius: 10px;
+  text-decoration: none;
+  border: 2px solid gray;
+  padding: 3px 5px;
+  font-weight: 600;
+  background: azure;
+  font-size: 1.1em;
 }
 
-.descargaLibro{
-    text-align: right;
-    width: 90%;
+.descargaLibro {
+  text-align: right;
+  width: 90%;
 }
 
-.descargaLibro a{
-    display: inline-block;
-    width: 100%;
+.descargaLibro a {
+  display: inline-block;
+  width: 100%;
 }
 
-.descargaLibro img{
-    display: inline-block;
-    width: 100%;
+.descargaLibro img {
+  display: inline-block;
+  width: 100%;
 }
 
 .titulo {
-    font-weight: 600;
-    color: #1D0158;
-    text-align: center;
-    margin-top: 10px;
-    margin-bottom: 6px;
+  font-weight: 600;
+  color: #1d0158;
+  text-align: center;
+  margin-top: 5px;
+  margin-bottom: 6px;
 }
 
-.contenedor .notificaciones{
-    width: auto;
-    height: auto;
-    padding: 4px;
-    display:flex;
-    align-items:center;
-    justify-content:space-around;
+.contenedor .notificaciones {
+  width: auto;
+  height: auto;
+  padding: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
-.contenedor .notificaciones span{
-    width: auto;  
-    height: 30px;
-    border: 2px solid gray;
-    background: azure;
-    color: black;
-    border-radius: 8px;
-    font-weight:600;
-    padding: 10px 8px;
-    text-align: center;
-    font-size: 1.1em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.contenedor .notificaciones span {
+  width: auto;
+  height: 30px;
+  border: 2px solid gray;
+  background: azure;
+  color: black;
+  border-radius: 8px;
+  font-weight: 600;
+  padding: 10px 8px;
+  text-align: center;
+  font-size: 1.1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 p {
-    color: #1D0158;
-    font-weight: 600;
-    padding: 5px;
-    font-size: 17px;
+  color: #1d0158;
+  font-weight: 600;
+  padding: 5px;
+  font-size: 17px;
 }
 
 a:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .border {
-    border: none;
-    margin-bottom: 5px;
-    border-top: 6px solid #B8711B;
-    background: none;
-    color: none;
+  border: none;
+  margin-bottom: 5px;
+  border-top: 6px solid #b8711b;
+  background: none;
+  color: none;
 }
 
 .pagos {
-    width: 100%;
-    height: auto;
-    margin-bottom: 10px;
+  width: 100%;
+  height: auto;
+  /* margin-bottom: 10px; */
 }
 
 .pagos a {
-    display: block;
-    margin: auto;
-    width: 90%;
-    background-color: transparent;
-    border: none;
+  display: block;
+  margin: auto;
+  width: 90%;
+  background-color: transparent;
+  border: none;
 }
 
 .imagen-pago img {
-    display: block;
-    margin: auto;
+  display: block;
+  margin: auto;
 }
 
 .reportes {
-    width: 100%;
-    height: auto;
-    margin-bottom: 10px;
+  width: 100%;
+  height: auto;
+  margin-bottom: 10px;
 }
 
 .reportes a {
-    display: block;
-    margin: auto;
-    width: 90%;
-    background-color: transparent;
-    border: none;
+  display: block;
+  margin: auto;
+  width: 90%;
+  background-color: transparent;
+  border: none;
+}
+
+.imagen-reportes {
+  width: fit-content;
+  height: 175px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
 }
 
 .imagen-reportes img {
-    display: block;
-    margin: auto;
+  width: 100%;
+  height: 100%;
 }
