--- a/css/estilosPrincipal.css
+++ b/css/estilosPrincipal.css
@@ -15,7 +15,7 @@
 
 /* Configuracion Base Pagina */
 html {
-  font-size: 10px;  
+  font-size: 10px;
   scroll-behavior: smooth;
   scroll-padding-top: 190px;
 }
@@ -32,7 +32,7 @@ body {
   display: grid;
   grid-template:
     "header" auto
-    "main"   auto
+    "main" auto
     "footer" auto;
 }
 
@@ -138,7 +138,7 @@ header nav ul li a span {
   font-size: 2.5rem;
 }
 
-.container-contenido{
+.container-contenido {
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -228,17 +228,24 @@ header nav ul li a span {
 }
 
 /* Listas con viñetas de Terminos */
-.textoContenido ul{
+.textoContenido ul {
   width: fit-content;
   margin-left: 20px;
 }
 
-
 /* Sección  Pie de Página  */
 .footer {
   grid-area: footer;
-  background: black;
   box-shadow: 1rem 0.5rem 0.5rem black;
+
+background-color: #f3dc80;
+background-image: -webkit-linear-gradient(359deg, #f3dc80 0%, #7fb8d4 78%);
+background-image: -moz-linear-gradient(359deg, #f3dc80 0%, #7fb8d4 78%);
+background-image: -o-linear-gradient(359deg, #f3dc80 0%, #7fb8d4 78%);
+background-image: linear-gradient(359deg, #f3dc80 0%, #7fb8d4 78%);
+
+
+  
 }
 
 .contenido-pie {
@@ -249,29 +256,33 @@ header nav ul li a span {
   align-items: center;
 }
 
- .contenido-pie .facebook {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    overflow: hidden;
-    border: 5px solid rgb(185, 209, 241);
-    margin-bottom: 15px;
-    display: grid;
-    place-items: center;
-    background-color: aliceblue;
-  }
+.contenido-pie .facebook {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px solid silver;
+  margin-bottom: 15px;
+  display: grid;
+  place-items: center;
+  background-color: aliceblue;
+}
 
-  .contenido-pie .facebook img {
-    width:125%;
-    object-fit: cover;
-  }
+.contenido-pie .facebook img {
+  width: 125%;
+  object-fit: cover;
+}
 
 .contenido-pie p {
-  color: AliceBlue;
-  font-size: 1.5em;
+  color: rgb(41, 38, 38);
+  font-size: 1.8em;
   font-weight: 500;
   text-align: center;
+  text-decoration: none;
 }
+
+
+
 
 .contenido-pie .whatsapp {
   width: fit-content;
@@ -286,21 +297,12 @@ header nav ul li a span {
 }
 
 .contenido-pie .whatsapp a {
-  color: aliceblue;
-  font-size: 1.5em;
+  color: rgb(41, 38, 38);
+  font-size: 1.8em;
   text-decoration: none;
   width: fit-content;
 }
 
-.w3c {
-  width: 88px;
-  height: 31px;
-  display: inline-block;
-}
-
-.w3c img {
-  transform: scale(1.6);
-}
 /* --------------------------------------------------------------------------------*/
 /* SECCION DEL CONTENIDO PAGINA CONTADOR ------------------------------------------*/
 /* --------------------------------------------------------------------------------*/
