--- a/css/estilosPrincipalDesktop.css
+++ b/css/estilosPrincipalDesktop.css
@@ -188,9 +188,14 @@
   /* Sección  Pie de Página  */
   .footer {
     grid-area: footer;
-    background: black;
     width: 100%;
     box-shadow: 1rem 0.5rem 0.5rem black;
+
+    background-color: #f3dc80;
+    background-image: -webkit-linear-gradient(359deg, #f3dc80 0%, #7fb8d4 78%);
+    background-image: -moz-linear-gradient(359deg, #f3dc80 0%, #7fb8d4 78%);
+    background-image: -o-linear-gradient(359deg, #f3dc80 0%, #7fb8d4 78%);
+    background-image: linear-gradient(359deg, #f3dc80 0%, #7fb8d4 78%);
   }
 
   .contenido-pie {
@@ -201,20 +206,19 @@
     align-items: center;
   }
 
-   .contenido-pie .facebook {
+  .contenido-pie .facebook {
     width: 150px;
     height: 150px;
     border-radius: 50%;
     overflow: hidden;
-    border: 5px solid rgb(185, 209, 241);
+    border: 3px solid rgb(2, 31, 68);
     margin-bottom: 15px;
     display: grid;
     place-items: center;
-    background-color: aliceblue;
   }
 
   .contenido-pie .facebook img {
-    width:125%;
+    width: 125%;
     object-fit: cover;
   }
 
