--- a/css/estilosContenido.css
+++ b/css/estilosContenido.css
@@ -120,49 +120,31 @@ a:hover {
   color: none;
 }
 
+.marcovideo {
+  width: 100%;
+  height: auto;
+  margin-top: 10px;
+  background-color: #000;
+}
+.marcovideo video {
+  width: 100%;
+  height: auto;
+}
+
 .pagos {
   width: 100%;
   height: auto;
-  /* margin-bottom: 10px; */
-}
-
-.pagos a {
-  display: block;
-  margin: auto;
-  width: 90%;
-  background-color: transparent;
-  border: none;
-}
-
-.imagen-pago img {
-  display: block;
-  margin: auto;
-}
-
-.reportes {
-  width: 100%;
-  height: auto;
-  margin-bottom: 10px;
-}
-
-.reportes a {
-  display: block;
-  margin: auto;
-  width: 90%;
-  background-color: transparent;
-  border: none;
 }
 
 .imagen-reportes {
-  width: fit-content;
-  height: 175px;
+  width: 40%;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: auto;
+  margin: 10px auto;
 }
 
 .imagen-reportes img {
+  display: block;
   width: 100%;
-  height: 100%;
 }
