Termino de organizar resolcion imagenes

--- a/css/estilosContenido.css
+++ b/css/estilosContenido.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  background-image: url("../imagenes/fondo-producto.jpg");
+  background-image: url("../imagenes/fondo-producto.png");
   background-size: 100% 100%;
   background-position: center;
   background-repeat: no-repeat;
