--- a/css/estilosCarrusel.css
+++ b/css/estilosCarrusel.css
@@ -1,7 +1,6 @@
-
 .container-carousel {
   position: relative;
-  background-color:rgb(215, 250, 250);
+  background-color: rgb(215, 250, 250);
   border: none;
   width: 31rem;
   height: 23rem;
@@ -9,8 +8,10 @@
   flex-direction: column;
   overflow: hidden;
   border: 1px solid silver;
+  margin: 0 auto;
   margin-bottom: 10px;
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.3), 3px 0px 3px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
 }
 
 .carruseles {
@@ -25,25 +26,26 @@
 .slider-section {
   flex: 1;
   height: 100%;
-  display: flex;
-  align-items: center;
 }
 
-
 .slider-section img {
+  display: block;
   width: 100%;
   height: 100%;
   object-fit: fill;
 }
 
-.libro{
-  padding-top: 18px;
+.slider-section .libro {
+  padding-top: 10px;
+  display: grid;
+  place-items: center;
+  background-color: rgb(215, 250, 250);
 }
 
-.libro img{
-  display: block;
-  width:70%;
+.slider-section .libro img {
+  width: 70%;
   height: 90%;
+  object-fit: fill;
 }
 
 .btn {
@@ -77,24 +79,49 @@
   right: 0.4rem; /* Ajustado a una posición relativa al contenedor */
 }
 
-/* DESKTOP FIRST */
-
-/* Laptops */
-@media (max-width: 992px) {
-}
-
-/* Tablets */
-@media (max-width: 768px) {
-}
-
 /* Celulares */
 @media (max-width: 600px) {
   .container-carousel {
     width: 100%;
   }
-  
 }
+
+/* MOBILE FIRST */
 
 /* Celulares Landscape */
 @media only screen and (orientation: landscape) {
+}
+
+/* Tablets */
+@media (min-width: 600px) {
+}
+
+/* Laptops */
+@media (min-width: 768px) {
+}
+
+/* --------------------------------------------------------------------------------------- */
+/* ESTILOS DESKTOP */
+/* --------------------------------------------------------------------------------------- */
+@media (min-width: 992px) {
+  .container-carousel {
+    width: 44rem;
+    height: 32rem;
+    margin: 0 auto;
+    margin-bottom: 15px;
+    border-radius: 5px;
+  }
+
+  .slider-section .libro {
+    padding-top: 40px;
+    display: grid;
+    place-items: center;
+    padding-right: 25px;
+  }
+
+  .slider-section .libro img {
+    width: 70%;
+    height: 90%;
+    object-fit: fill;
+  }
 }
